WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221354
[Cocoa] WebM audio goes out-of-sync or stops playing after a seek
https://bugs.webkit.org/show_bug.cgi?id=221354
Summary
[Cocoa] WebM audio goes out-of-sync or stops playing after a seek
Jer Noble
Reported
2021-02-03 12:54:55 PST
[Cocoa] WebM audio goes out-of-sync or stops playing after a seek
Attachments
Patch
(5.85 KB, patch)
2021-02-03 13:01 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(7.60 KB, patch)
2021-02-03 13:11 PST
,
Jer Noble
eric.carlson
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(8.39 KB, patch)
2021-02-03 15:37 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-02-03 12:56:15 PST
<
rdar://73471690
>
Jer Noble
Comment 2
2021-02-03 13:01:45 PST
Created
attachment 419176
[details]
Patch
Jer Noble
Comment 3
2021-02-03 13:11:56 PST
Created
attachment 419179
[details]
Patch
Jer Noble
Comment 4
2021-02-03 15:37:49 PST
Created
attachment 419195
[details]
Patch for landing
EWS
Comment 5
2021-02-03 20:06:25 PST
Committed
r272353
: <
https://trac.webkit.org/changeset/272353
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419195
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug